fix(SHS-6215): color contrast in links to meet minimun requirement in mountain

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.spotlight.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.spotlight.scss
@@ -112,9 +112,10 @@
       }
 
       &-spotlight-body {
-        // Link color overrides for Canyon color pairing.
+        // Link color overrides for Canyon and Mountain color pairings.
         @include hb-themes(('colorful', 'airy')) {
-          .hc-pairing-canyon & {
+          .hc-pairing-canyon &,
+          .hc-pairing-mountain & {
             a:not([class]), a.mailto, a[href^="mailto:"], a.ext {
               color: var(--palette--primary);
 
