--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/elements/_tables.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/elements/_tables.scss
@@ -62,4 +62,20 @@ table {
   tr:nth-child(even) {
     @include table-row;
   }
+
+  tbody tr td {
+    // Link color overrides for Mountain color pairing.
+    a:not([class]), a.mailto, a[href^="mailto:"], a.ext {
+      @include hb-themes(('colorful', 'airy')) {
+        .hc-pairing-mountain & {
+          color: var(--palette--secondary);
+
+          &:hover,
+          &:focus {
+            color: var(--palette--secondary-darken-12);
+          }
+        }
+      }
+    }
+  }
 }
