--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_general.scss
@@ -64,6 +64,34 @@
   @include hb-well;
 }
 
+// Override default link color for the Mountain color pairings.
+.pullquote {
+  .hc-pairing-mountain & {
+    a:not([class]), a.mailto, a[href^='mailto:'], a.ext, a.hs-external-link {
+      color: var(--palette--primary);
+
+      &:hover,
+      &:focus {
+        color: var(--palette--tertiary-darken-20);
+      }
+    }
+
+    // Ensure that the external link icon color is correct.
+    a.hs-external-link {
+      &::after {
+        background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'mountain'), 'primary')));
+      }
+
+      &:hover,
+      &:focus {
+        &::after {
+          background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'mountain'), 'tertiary-darken-20')));
+        }
+      }
+    }
+  }
+}
+
 .hb-divider {
   @include hb-divider;
 }
