--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/utilities/_wysiwyg-text-area.scss
@@ -104,7 +104,7 @@
     }
   }
 
-  // Override default link color for the Canyon color pairing.
+  // Override default link color for Canyon and Mountain color pairings.
   @include hb-themes(('colorful', 'airy')) {
     .hb-well &,
     .hs-paragraph-style--well &,
@@ -130,6 +130,31 @@
           &:focus {
             &::after {
               background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'canyon'), 'tertiary-darken-20')));
+            }
+          }
+        }
+      }
+
+      .hc-pairing-mountain & {
+        a:not([class]), a.mailto, a[href^='mailto:'], a.ext, a.hs-external-link {
+          color: var(--palette--secondary);
+
+          &:hover,
+          &:focus {
+            color: var(--palette--secondary-darken-12);
+          }
+        }
+
+        // Ensure that the external link icon color is correct.
+        a.hs-external-link {
+          &::after {
+            background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'mountain'), 'secondary')));
+          }
+
+          &:hover,
+          &:focus {
+            &::after {
+              background-image: svg(hc-get-icons('ext-link', map-get(map-get($hc-colorful-pairings, 'mountain'), 'secondary-darken-12')));
             }
           }
         }
